Clean up grid manager changes.

--- a/shared/src/jsMain/kotlin/baaahs/ui/gridlayout/README
+++ b/shared/src/jsMain/kotlin/baaahs/ui/gridlayout/README
@@ -1,1 +1,1 @@
-Ported from [react-grid-layout](https://github.com/react-grid-layout/react-grid-layout) 1.3.4.
+Adapted from [react-grid-layout](https://github.com/react-grid-layout/react-grid-layout) 1.3.4.
